--- a/framework/workflow/meta/index.html
+++ b/framework/workflow/meta/index.html
@@ -3,7 +3,7 @@
 --><script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script><script src="/openintegrity.org/js/anchor.min.js"></script><script src="/openintegrity.org/js/site.js"></script><link rel="shortcut icon" href="/openintegrity.org/images/favicon.ico"><link rel="apple-touch-icon" href="/openintegrity.org/images/apple-touch-icon.png"><link rel="apple-touch-icon" sizes="72x72" href="/openintegrity.org/images/apple-touch-icon-72x72.png"><link rel="apple-touch-icon" sizes="114x114" href="/openintegrity.org/images/apple-touch-icon-114x114.png"><link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css"><link rel="alternate" type="application/rss+xml" title="RSS" href="{{ site.baseurl }}/atom.xml"></head><body class="has-docked-nav"><div class="container"><div class="navbar-spacer"></div><nav class="navbar"><div class="container"><ul class="navbar-list"><li class="navbar-item"><a href="/openintegrity.org" class="navbar-link">Home</a></li><li class="navbar-item"><a href="#" data-popover="#codeNavAbout" class="navbar-link">About</a><div id="codeNavAbout" class="popover"><ul class="popover-list"><li class="popover-item"><a href="/openintegrity.org/about" class="popover-link">Overview</a></li><li class="popover-item"><a href="/openintegrity.org/about#team" class="popover-link">Team</a></li><li class="popover-item"><a href="/openintegrity.org/about#partners" class="popover-link">Partners</a></li><li class="popover-item"><a href="/openintegrity.org/about#board" class="popover-link">Advisory Board</a></li></ul></div></li><li class="navbar-item"><a href="#" data-popover="#codeNavPopover" class="navbar-link">Approach</a><div id="codeNavPopover" class="popover"><ul class="popover-list"><li class="popover-item"><a href="/openintegrity.org/framework" class="popover-link">Overview</a></li><li class="popover-item"><a href="/openintegrity.org/impact" class="popover-link">Impact</a></li><li class="popover-item"><a href="/openintegrity.org/practices" class="popover-link">Practices</a></li><li class="popover-item"><a href="#" class="popover-link">Metrics (soon)</a></li><li class="popover-item"><a href="#" class="popover-link">Scores (soon)</a></li></ul></div></li><li class="navbar-item"><a href="/openintegrity.org/blog" class="navbar-link">Blog</a></li><li class="navbar-item"><a href="/openintegrity.org/join" class="navbar-link">Join</a></li></ul></div></nav><div class="row links"><small><div class="crumb u-pull-left"><a href="/openintegrity.org">Home</a> / <a href="/openintegrity.org/framework/">Framework</a>  / <a href="/openintegrity.org/framework/workflow/">Workflow</a>  / Meta</div><div class="utilities u-pull-right"><a href="https://code.iilab.org/openintegrity/framework/edit/master/workflow/meta.md">Edit</a> - <a href="https://code.iilab.org/openintegrity/framework/commits/master/workflow/meta.md">Changes</a> - <a href="https://code.iilab.org/openintegrity/framework/tree/master/workflow/meta.md">Source</a></div></small></div><h1 id="framework-platform">Framework Platform</h1>
 <p><a href="http://cci.mit.edu/publications/CCIwp2009-01.pdf">Harnessing Crowds: Mapping the Genome of Collective Intelligence</a></p>
 <p>This paper proposes an interesting reading grid for how Open Integrity positions itself in terms of a participative effort.</p>
-<p><img src="../ci_genes.png" /></p>
+<p><img src="../../../images/ci_genes.png" /></p>
 <h2 id="who">Who?</h2>
 <p>In the question of &quot;who?&quot; the paper proposes Hierarchy and Crowd as possible &quot;Genes&quot;. In that sense <strong>Open Integrity is both an expertise led effort</strong> - where community of practices are an organising principle - <strong>and a Crowd-led or open participation project</strong> in the sense that it doesn't enforce any control on who can participate and allows anonymous participation.</p>
 <p>As a consequence there should be clear rules of engagement (including a meritocratic assignment of moderation roles) and an enforced code of conduct.</p>
@@ -140,9 +140,23 @@
 </tr>
 <tr class="even">
 <td>Data</td>
+<td>developers</td>
+<td>glory/money</td>
+<td>create/update - Entries</td>
+<td>individual</td>
+</tr>
+<tr class="odd">
+<td>Data</td>
 <td>reviewers</td>
 <td>love/glory?</td>
-<td>create - Entries</td>
+<td>create/update - Entries</td>
+<td>individual</td>
+</tr>
+<tr class="even">
+<td>Data</td>
+<td>job seekers</td>
+<td>money</td>
+<td>create/update - Entries</td>
 <td>individual</td>
 </tr>
 <tr class="odd">
