--- a/framework/workflow/specifications/index.html
+++ b/framework/workflow/specifications/index.html
@@ -18,6 +18,7 @@
 <li><a href="#harvesters">Harvesters</a></li>
 <li><a href="#wrapper">Wrapper</a></li>
 <li><a href="#moderator">Moderator</a></li>
+<li><a href="#developers">Developers</a></li>
 </ul></li>
 <li><a href="#features">Features</a></li>
 <li><a href="#bottom-up-specs">Bottom Up specs</a>
@@ -65,7 +66,7 @@
 <h1 id="roles">Roles</h1>
 <h2 id="anonymousguest">Anonymous/Guest</h2>
 <ul>
-<li>Should be able to post (with IP logged?)</li>
+<li>Should be able to post (with IP logged? Signature)</li>
 </ul>
 <h2 id="participant">Participant</h2>
 <ul>
@@ -86,6 +87,10 @@
 <h2 id="moderator">Moderator</h2>
 <blockquote>
 <p>Enforces code of conduct.</p>
+</blockquote>
+<h2 id="developers">Developers</h2>
+<blockquote>
+<p>Ownership of the tools (domain,...)</p>
 </blockquote>
 <h1 id="features">Features</h1>
 <ul>
