--- a/framework/workflow/index.html
+++ b/framework/workflow/index.html
@@ -145,7 +145,7 @@
 <p>For more high level design thinking about this see:</p>
 <ul>
 <li><a href="https://the-engine-room.github.io/library/microtasking/">Engine Room Microtasking research</a></li>
-<li><a href="/framework/workflow/incentives">Incentives document</a></li>
+<li><a href="incentives">Incentives document</a></li>
 </ul>
 <h4 id="review-triggers">Review Triggers</h4>
 <p>A number of data related events could trigger the need for a review. Here are some example of event types (which could all be subscribed to independently, or by different groups of users)</p>
