--- a/index.html
+++ b/index.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html><!--if lt IE 7<html class="ie ie6" lang="en">--><!--if IE 7<html class="ie ie7" lang="en">--><!--if IE 8<html class="ie ie8" lang="en">--><!--if (gte IE 9)|!(IE)<!--><html lang="en"> <!--
 --><html><head><meta charset="utf8"><title> &middot; Open Integrity</title><meta name="description" content=""><meta name="author" content=""><meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"><link rel="stylesheet" href="/openintegrity.org/css/skeleton.css"><link rel="stylesheet" href="/openintegrity.org/css/site.css"><!--if lt IE 9script(src="http://html5shim.googlecode.com/svn/trunk/html5.js")
---><script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script><script src="/openintegrity.org/js/anchor.min.js"></script><script src="/openintegrity.org/js/site.js"></script><link rel="shortcut icon" href="/openintegrity.org/images/favicon.ico"><link rel="apple-touch-icon" href="/openintegrity.org/images/apple-touch-icon.png"><link rel="apple-touch-icon" sizes="72x72" href="/openintegrity.org/images/apple-touch-icon-72x72.png"><link rel="apple-touch-icon" sizes="114x114" href="/openintegrity.org/images/apple-touch-icon-114x114.png"><link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css"><link href="//fonts.googleapis.com/css?family=Lora:400,300,600" rel="stylesheet" type="text/css"><link rel="alternate" type="application/rss+xml" title="RSS" href="{{ site.baseurl }}/atom.xml"></head><body class="hero"><div class="container"><section class="header"><h1 class="title">Open Integrity Initiative</h1><h2 class="title">Data Driven Security and Privacy</h2></section><div class="navbar-spacer"></div><nav class="navbar"><div class="container"><ul class="navbar-list"><li class="navbar-item"><a href="/openintegrity.org" class="navbar-link">Home</a></li><li class="navbar-item"><a href="#" data-popover="#codeNavAbout" class="navbar-link">About</a><div id="codeNavAbout" class="popover"><ul class="popover-list"><li class="popover-item"><a href="/openintegrity.org/about" class="popover-link">Overview</a></li><li class="popover-item"><a href="/openintegrity.org/about#team" class="popover-link">Team</a></li><li class="popover-item"><a href="/openintegrity.org/about#partners" class="popover-link">Partners</a></li><li class="popover-item"><a href="/openintegrity.org/about#board" class="popover-link">Advisory Board</a></li></ul></div></li><li class="navbar-item"><a href="#" data-popover="#codeNavPopover" class="navbar-link">Approach</a><div id="codeNavPopover" class="popover"><ul class="popover-list"><li class="popover-item"><a href="/openintegrity.org/framework" class="popover-link">Overview</a></li><li class="popover-item"><a href="/openintegrity.org/impact" class="popover-link">Impact</a></li><li class="popover-item"><a href="/openintegrity.org/practices" class="popover-link">Practices</a></li><li class="popover-item"><a href="#" class="popover-link">Metrics (soon)</a></li><li class="popover-item"><a href="#" class="popover-link">Scores (soon)</a></li></ul></div></li><li class="navbar-item"><a href="/openintegrity.org/blog" class="navbar-link">Blog</a></li><li class="navbar-item"><a href="/openintegrity.org/join" class="navbar-link">Join</a></li></ul></div></nav><div class="docs-section"><div class="space"> </div><h2 id="the-open-integrity-initiative-is-booting-up.">The Open Integrity Initiative is <a href="blog/booting-up">booting up</a>.</h2>
-<p>The platform aims to provide <strong>reliable and evidence based</strong> answers to questions such as:</p>
+--><script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script><script src="/openintegrity.org/js/anchor.min.js"></script><script src="/openintegrity.org/js/site.js"></script><link rel="shortcut icon" href="/openintegrity.org/images/favicon.ico"><link rel="apple-touch-icon" href="/openintegrity.org/images/apple-touch-icon.png"><link rel="apple-touch-icon" sizes="72x72" href="/openintegrity.org/images/apple-touch-icon-72x72.png"><link rel="apple-touch-icon" sizes="114x114" href="/openintegrity.org/images/apple-touch-icon-114x114.png"><link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css"><link href="//fonts.googleapis.com/css?family=Lora:400,300,600" rel="stylesheet" type="text/css"><link rel="alternate" type="application/rss+xml" title="RSS" href="{{ site.baseurl }}/atom.xml"></head><body class="hero"><div class="container"><section class="header"><h1 class="title">Open Integrity Initiative</h1><h2 class="title">Data Driven Security and Privacy</h2><div class="row"><input type="email" placeholder="your@email.com"></div><div class="row"><input type="submit" value="Keep me updated" class="button"></div></section><div class="navbar-spacer"></div><nav class="navbar"><div class="container"><ul class="navbar-list"><li class="navbar-item"><a href="/openintegrity.org" class="navbar-link">Home</a></li><li class="navbar-item"><a href="#" data-popover="#codeNavAbout" class="navbar-link">About</a><div id="codeNavAbout" class="popover"><ul class="popover-list"><li class="popover-item"><a href="/openintegrity.org/about" class="popover-link">Overview</a></li><li class="popover-item"><a href="/openintegrity.org/about#team" class="popover-link">Team</a></li><li class="popover-item"><a href="/openintegrity.org/about#partners" class="popover-link">Partners</a></li><li class="popover-item"><a href="/openintegrity.org/about#board" class="popover-link">Advisory Board</a></li></ul></div></li><li class="navbar-item"><a href="#" data-popover="#codeNavPopover" class="navbar-link">Approach</a><div id="codeNavPopover" class="popover"><ul class="popover-list"><li class="popover-item"><a href="/openintegrity.org/framework" class="popover-link">Overview</a></li><li class="popover-item"><a href="/openintegrity.org/impact" class="popover-link">Impact</a></li><li class="popover-item"><a href="/openintegrity.org/practices" class="popover-link">Practices</a></li><li class="popover-item"><a href="#" class="popover-link">Metrics (soon)</a></li><li class="popover-item"><a href="#" class="popover-link">Scores (soon)</a></li></ul></div></li><li class="navbar-item"><a href="/openintegrity.org/blog" class="navbar-link">Blog</a></li><li class="navbar-item"><a href="/openintegrity.org/join" class="navbar-link">Join</a></li></ul></div></nav><div class="docs-section"><div class="space"> </div><h2 id="the-open-integrity-initiative-is-booting-up.">The Open Integrity Initiative is <a href="blog/booting-up">booting up</a>.</h2>
+<p>We provide <strong>reliable and evidence based</strong> answers to questions such as:</p>
 <ul>
 <li>Which tools are open source?</li>
-<li>Which provide end-to-end encryption?</li>
-<li>Which implement forward secrecy?</li>
-<li>Which support two factor authentication?</li>
+<li>Which provide end-to-end encryption or support two factor authentication?</li>
 <li>Which can be downloaded securely and verified to be authentic?</li>
 </ul>
 <p>You can read more <a href="about">about the project</a>.</p>
+<hr />
+<h2 id="our-approach">Our Approach</h2>
+<p><strong>Open Integrity</strong> focuses on <strong>gathering measurement and claims</strong> about the adoption of best practices that support the security and privacy of software. We're <a href="../../partners#measurement">developing partnerships</a> in order to <strong>define metrics and collect data</strong> that will be available for an audience of professionals (software engineers, trainers, advocacy organizations) and will help provide answers about best practices adoption.</p>
+<div class="row">
+<img src="images/framework.png" class="u-max-full-width" />
+</div>
 <hr />
 <h2 id="get-involved">Get Involved</h2>
 <p>If you're collecting data or doing research on security and privacy then we'd like to hear about your work! We're inviting a range of experts to contribute to the design of the index and identifying best practices in the following key areas:</p>
 <div class="row">
 <div class="one-third column category">
-<h6 id="technology">Technology</h6>
+<h4 id="technology">Technology</h4>
 <ul>
 <li><a href="#" class="focus" title="Current Focus"><strong>Dependency Management</strong></a></li>
 <li>Architecture</li>
@@ -23,7 +27,7 @@
 </ul>
 </div>
 <div class="one-third column category">
-<h6 id="policy">Policy</h6>
+<h4 id="policy">Policy</h4>
 <ul>
 <li><a href="#" title="Current Focus"><strong>Terms of Service</strong></a></li>
 <li>Corporate Accountability</li>
@@ -31,16 +35,13 @@
 </ul>
 </div>
 <div class="one-third column category">
-<h6 id="design">Design</h6>
+<h4 id="design">Design</h4>
 <ul>
 <li><a href="#" title="Current Focus"><strong>Default Settings</strong></a></li>
 <li>User Experience</li>
 <li>Translations</li>
 </ul>
 </div>
-</div>
-<div class="row">
-<img src="images/framework.png" class="u-max-full-width" />
 </div>
 <hr />
 <h2 id="what-were-working-on">What we're working on</h2>
@@ -65,7 +66,19 @@
 <div class="row">
 <img src="images/kanban.png" class="u-max-full-width" />
 </div>
-</div><div class="row links"><small><div class="utilities u-pull-right"><a href="https://code.iilab.org/openintegrity/openintegrity.org/edit/master/index.md">Edit</a> - <a href="https://code.iilab.org/openintegrity/openintegrity.org/commits/master/index.md">Changes</a> - <a href="https://code.iilab.org/openintegrity/openintegrity.org/tree/master/index.md">Source</a></div></small></div><hr><div class="related"><h5>Recent Blog Posts</h5><ul class="related-posts"><li><a href="/openintegrity.org/blog/internet-freedom-festival">Impact Workshop at the IFF in Valencia</a><!-- small= moment(post.date).format("%Y-%m-%j")--> <small>Tue Mar 08 2016 01:00:00 GMT+0100 (CET)</small></li><li><a href="/openintegrity.org/blog/booting-up">Booting up the Open Integrity Index</a><!-- small= moment(post.date).format("%Y-%m-%j")--> <small>Tue Mar 01 2016 01:00:00 GMT+0100 (CET)</small></li></ul></div></div></body><hr><div class="section get-help"><div class="container"><h3 class="section-heading">Want to join the initiative?</h3><p class="section-description">Open Integrity needs your help to provide the best and most up to date information. Get in touch to join the initiative !</p><a href="mailto:contact@openintegrity.org" class="button button-primary">Get in touch</a></div></div><div class="section categories"><div class="container"><div class="row"><div class="two columns">&nbsp;</div><div class="eight column category"><h4>Developed with ❤ by</h4><a href="https://iilab.org"><img src="/openintegrity.org/images/iilab_white.svg" class="u-max-full-width"></a><h5>Information Innovation Lab</h5><p>Applied research and development of public interest technology.</p></div><div class="two columns">&nbsp;</div></div></div></div><script>$( document ).ready(function() {
+<hr />
+<h5>
+Recent Blog Posts
+</h5>
+<ul class="related-posts">
+<li>
+<a href="/openintegrity.org/blob/booting-up">Booting up the Open Integrity Index</a> <small>2016-03-01</small>
+</li>
+<li>
+<a href="/openintegrity.org/blob/internet-freedom-festival">Impact Workshop at the IFF in Valencia</a> <small>2016-03-08</small>
+</li>
+</ul>
+</div><div class="row links"><small><div class="utilities u-pull-right"><a href="https://code.iilab.org/openintegrity/openintegrity.org/edit/master/index.md">Edit</a> - <a href="https://code.iilab.org/openintegrity/openintegrity.org/commits/master/index.md">Changes</a> - <a href="https://code.iilab.org/openintegrity/openintegrity.org/tree/master/index.md">Source</a></div></small></div></div></body><hr><div class="section get-help"><div class="container"><h3 class="section-heading">Want to join the initiative?</h3><p class="section-description">Open Integrity needs your help to provide the best and most up to date information. Get in touch to join the initiative !</p><a href="mailto:contact@openintegrity.org" class="button button-primary">Get in touch</a></div></div><div class="section categories"><div class="container"><div class="row"><div class="two columns">&nbsp;</div><div class="eight column category"><h4>Developed with ❤ by</h4><a href="https://iilab.org"><img src="/openintegrity.org/images/iilab_white.svg" class="u-max-full-width"></a><h5>Information Innovation Lab</h5><p>Applied research and development of public interest technology.</p></div><div class="two columns">&nbsp;</div></div></div></div><script>$( document ).ready(function() {
   anchors.options.placement = 'left';
   anchors.add('h1,h2,h3');
 })
