--- a/metrics/0_metadata/platforms/index.html
+++ b/metrics/0_metadata/platforms/index.html
@@ -4,8 +4,14 @@
 <blockquote>
 <p>Do we need all compilation targets?? For now start with top level platforms, go more detailed when needed.</p>
 </blockquote>
-<p>:<a href="../../schema/meta/platforms.md"></a></p>
-<p>ERROR: Could not read file (../../schema/meta/platforms.md)</p>
+<h1 id="platforms-1">Platforms</h1>
+<ul>
+<li>Windows</li>
+<li>OSX</li>
+<li>Linux</li>
+<li>Android</li>
+<li>iOS</li>
+</ul>
 </div></div></body><hr><div class="section get-help"><div class="container"><h3 class="section-heading">Want to join the initiative?</h3><p class="section-description">Open Integrity needs your help to provide the best and most up to date information. Get in touch to join the initiative !</p><a href="mailto:contact@openintegrity.org" class="button button-primary">Get in touch</a></div></div><div class="section categories"><div class="container"><div class="row"><div class="two columns">&nbsp;</div><div class="eight column category"><h4>Developed with ❤ by</h4><a href="https://iilab.org"><img src="/openintegrity.org/images/iilab_white.svg" class="u-max-full-width"></a><h5>Information Innovation Lab</h5><p>Applied research and development of public interest technology.</p></div><div class="two columns">&nbsp;</div></div></div></div><script>$( document ).ready(function() {
   anchors.options.placement = 'left';
   anchors.add('h1,h2,h3');
