--- a/metrics/2_measurements/technical_architecture/index.html
+++ b/metrics/2_measurements/technical_architecture/index.html
@@ -8,10 +8,45 @@
 </ul>
 <h2 id="project-dependencies">Project Dependencies</h2>
 <blockquote>
-<p>This might require a graph data structure. This is important but can have significant <a href="../architecture/scale.md">scale sensitivity</a> consequences. In the big picture dependencies need to be typed (code, runtime, remote, os, device, protocols,...). Code is a low hanging fruit for open source. OS, Device can be simple properties for now.</p>
+<p>This might require a graph data structure. This is important but can have significant <a href="../../../architecture/scale">scale sensitivity</a> consequences. In the big picture dependencies need to be typed (code, runtime, remote, os, device, protocols,...). Code is a low hanging fruit for open source. OS, Device can be simple properties for now.</p>
 </blockquote>
-<p>:<a href="../../schema/project/dependencies"></a></p>
-<p>ERROR: Could not read file (../../schema/project/dependencies)</p>
+<h1 id="project-identifier">Project identifier</h1>
+<ul>
+<li>metadata
+<ul>
+<li>path: /schema/metrics/meta/project/id</li>
+</ul></li>
+<li>type
+<ul>
+<li>URI</li>
+</ul></li>
+</ul>
+<h2 id="architectural-patterns">Architectural Patterns</h2>
+<p>Simple client / Autonomous / Doesn't talk to the network.</p>
+<ul>
+<li></li>
+</ul>
+<p>Browser</p>
+<ul>
+<li>&lt;--&gt; ()</li>
+</ul>
+<p>Client Server</p>
+<ul>
+<li>&lt;--&gt; *</li>
+</ul>
+<p>Peer to peer</p>
+<ul>
+<li>&lt;- * -&gt; *</li>
+</ul>
+<blockquote>
+<p>Network dependencies are one thing, but sensors are also part of it.</p>
+</blockquote>
+<ul>
+<li>What is an architectural contribution to OII?</li>
+</ul>
+<blockquote>
+<p>It is a contribution, therefore some form of measurement, observation or claim that a particular architectural pattern is the case for some project.</p>
+</blockquote>
 </div></div></body><hr><div class="section get-help"><div class="container"><h3 class="section-heading">Want to join the initiative?</h3><p class="section-description">Open Integrity needs your help to provide the best and most up to date information. Get in touch to join the initiative !</p><a href="mailto:contact@openintegrity.org" class="button button-primary">Get in touch</a></div></div><div class="section categories"><div class="container"><div class="row"><div class="two columns">&nbsp;</div><div class="eight column category"><h4>Developed with ❤ by</h4><a href="https://iilab.org"><img src="/openintegrity.org/images/iilab_white.svg" class="u-max-full-width"></a><h5>Information Innovation Lab</h5><p>Applied research and development of public interest technology.</p></div><div class="two columns">&nbsp;</div></div></div></div><script>$( document ).ready(function() {
   anchors.options.placement = 'left';
   anchors.add('h1,h2,h3');
