Mobile menu alignment

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ Approach</a><div class="dropdown-menu"><a href="/framework" class="dropdown-item
 <ul>
 <li><a href="framework/workflow">Use Cases</a></li>
 <li><a href="design/sitemap-2">Sitemap</a></li>
-<li><a href="design/mockup">Mockup Site</a></li>
+<li><a href="mockup">Mockup Site</a></li>
 </ul>
 </div>
 </div>
