--- a/index.html
+++ b/index.html
@@ -1,15 +1,6 @@
-<!DOCTYPE html><html><head><meta charset="utf8"><title> &middot; Open Integrity</title><meta name="description" content=""><meta name="author" content=""><meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"><link rel="stylesheet" href="/css/bootstrap.min.css"><link rel="stylesheet" href="/css/tether.min.css"><link rel="stylesheet" href="/css/skeleton.css"><link rel="stylesheet" href="/css/site.css"><!--[if lt IE 9]><script src="/js/html5.js"></script><![endif]--><script src="/js/jquery.min.js"></script><script src="/js/tether.min.js"></script><script src="/js/bootstrap.min.js"></script><script src="/js/anchor.min.js"></script><script src="/js/site.js"></script><link rel="shortcut icon" href="/images/favicon.ico"><link rel="apple-touch-icon" href="/images/apple-touch-icon.png"><link rel="apple-touch-icon" sizes="72x72" href="/images/apple-touch-icon-72x72.png"><link rel="apple-touch-icon" sizes="114x114" href="/images/apple-touch-icon-114x114.png"><link rel="stylesheet" type="text/css" href="/css/fonts.css"><link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml"></head><body class="hero"><div class="container"><section class="header"><h1 class="title">Open Integrity</h1><h2 class="title">Security and Privacy<br>Software Metrics </h2><div class="row"><input type="email" placeholder="your@email.com" style="text-align:center"></div><div class="row"><input type="submit" value="Keep me updated" class="button"></div></section><div class="navbar-spacer"></div><nav class="navbar"><div class="container"><button type="button" data-toggle="collapse" data-target="#navbar" class="navbar-toggler hidden-md-up">☰ Menu</button><div id="navbar" class="collapse navbar-toggleable-sm"><ul class="nav navbar-nav"><li class="nav-item"><a href="/" class="nav-link">Home <span class="sr-only">(current)</span></a></li><li class="nav-item dropdown"><a data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" class="nav-link dropdown-toggle">About</a><div class="dropdown-menu"><a href="/about" class="dropdown-item">Overview</a><a href="/about#partners" class="dropdown-item">Partners</a></div></li><li class="nav-item dropdown"><a data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" class="nav-link dropdown-toggle"> 
+<!DOCTYPE html><html><head><meta charset="utf8"><title> &middot; Open Integrity</title><meta name="description" content=""><meta name="author" content=""><meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"><link rel="stylesheet" href="/css/bootstrap.min.css"><link rel="stylesheet" href="/css/tether.min.css"><link rel="stylesheet" href="/css/skeleton.css"><link rel="stylesheet" href="/css/site.css"><!--[if lt IE 9]><script src="/js/html5.js"></script><![endif]--><script src="/js/jquery.min.js"></script><script src="/js/tether.min.js"></script><script src="/js/bootstrap.min.js"></script><script src="/js/anchor.min.js"></script><script src="/js/site.js"></script><link rel="shortcut icon" href="/images/favicon.ico"><link rel="apple-touch-icon" href="/images/apple-touch-icon.png"><link rel="apple-touch-icon" sizes="72x72" href="/images/apple-touch-icon-72x72.png"><link rel="apple-touch-icon" sizes="114x114" href="/images/apple-touch-icon-114x114.png"><link rel="stylesheet" type="text/css" href="/css/fonts.css"><link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml"></head><body class="hero"><div class="container"><section class="header"><img src="images/oii-medium-logo.svg"><h4 class="title">Security and Privacy Software Metrics </h4><div class="row"><input type="email" placeholder="your@email.com" style="text-align:center"></div><div class="row"><input type="submit" value="Keep me updated" class="button"></div></section><div class="navbar-spacer"></div><nav class="navbar"><div class="container"><button type="button" data-toggle="collapse" data-target="#navbar" class="navbar-toggler hidden-md-up">☰ Menu</button><div id="navbar" class="collapse navbar-toggleable-sm"><ul class="nav navbar-nav"><li class="nav-item"><a href="/" class="nav-link">Home <span class="sr-only">(current)</span></a></li><li class="nav-item dropdown"><a data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" class="nav-link dropdown-toggle">About</a><div class="dropdown-menu"><a href="/about" class="dropdown-item">Overview</a><a href="/about#partners" class="dropdown-item">Partners</a></div></li><li class="nav-item dropdown"><a data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" class="nav-link dropdown-toggle"> 
 Approach</a><div class="dropdown-menu"><a href="/framework" class="dropdown-item">Overview</a><a href="/impact" class="dropdown-item">Impact</a><a href="/practices" class="dropdown-item">Practices</a><a href="/metrics" class="dropdown-item">Metrics</a><div class="dropdown-divider"></div><a href="#" class="dropdown-item">Scores (soon)</a></div></li><li class="nav-item"><a href="/blog" class="nav-link">Blog</a></li><li class="nav-item"><a href="/contribute" class="nav-link">Contribute</a></li></ul></div></div></nav><div class="docs-section"><div class="space"> </div><h2 id="open-integrity-is-booting-up.">Open Integrity is <a href="blog/booting-up">booting up</a>.</h2>
-<p>We aim to provide <strong>reliable and evidence based</strong> answers to questions such as:</p>
-<ul>
-<li>Which tools can be downloaded securely and verified to be authentic?</li>
-<li>Which tools provide end-to-end encryption by default?</li>
-<li>Which terms of service protect your private data?</li>
-</ul>
-<p>You can read more <a href="about">about the project</a>.</p>
-<hr />
-<h2 id="get-involved">Get Involved</h2>
-<p>If you're collecting data or doing research on security and privacy then we'd like to hear about your work! We're inviting a range of experts to contribute to the design of the index and identifying best practices in the following key areas:</p>
+<p>We provide <strong>reliable and evidence based</strong> data about:</p>
 <div class="row">
 <div class="one-third column category">
 <h4 id="technology"><a href="/practices/technology">Technology</a></h4>
@@ -40,12 +31,6 @@ Approach</a><div class="dropdown-menu"><a href="/framework" class="dropdown-item
 </div>
 </div>
 <hr />
-<h2 id="our-approach">Our Approach</h2>
-<p><strong>Open Integrity</strong> focuses on <strong>gathering measurement and claims</strong> about the adoption of best practices that support the security and privacy of software. We're <strong>developing partnerships</strong> in order to <strong>define metrics and collect data</strong> that will be available for an audience of professionals (software engineers, trainers, advocacy organizations) and will help provide answers about best practices adoption.</p>
-<div class="row">
-<img src="images/framework.png" class="u-max-full-width" />
-</div>
-<hr />
 <h2 id="what-were-working-on">What we're working on</h2>
 <div class="row">
 <div class="one-half column category">
@@ -66,7 +51,24 @@ Approach</a><div class="dropdown-menu"><a href="/framework" class="dropdown-item
 </div>
 </div>
 <div class="row">
-<img src="images/kanban.png" class="u-max-full-width" />
+<img src="images/mockup.png" class="u-max-full-width" />
+</div>
+<hr />
+<h2 id="get-involved">Get Involved</h2>
+<p>If you're collecting data or doing research on security and privacy then we'd like to hear about your work!</p>
+<p>We're <strong>developing partnerships</strong> in order to <strong>define metrics and collect data</strong> that will be available for an audience of professionals (software engineers, trainers, advocacy organizations) and will help provide answers about best practices adoption.</p>
+<p>We're inviting a range of experts to contribute to the design of the index and identifying best practices.</p>
+<hr />
+<h2 id="our-approach">Our Approach</h2>
+<p><strong>Open Integrity</strong> focuses on <strong>gathering measurement and claims</strong> about the adoption of best practices that support the security and privacy of software.</p>
+<ul>
+<li>Which tools can be downloaded securely and verified to be authentic?</li>
+<li>Which tools provide end-to-end encryption by default?</li>
+<li>Which terms of service protect your private data?</li>
+</ul>
+<p>You can read more <a href="about">about the project</a>.</p>
+<div class="row">
+<img src="images/framework.png" class="u-max-full-width" />
 </div>
 <hr />
 <h5>
