--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html><head><meta charset="utf8"><title> &middot; Open Integrity</title><meta name="description" content=""><meta name="author" content=""><meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"><link rel="stylesheet" href="/css/bootstrap.min.css"><link rel="stylesheet" href="/css/tether.min.css"><link rel="stylesheet" href="/css/skeleton.css"><link rel="stylesheet" href="/css/site.css"><!--[if lt IE 9]><script src="/js/html5.js"></script><![endif]--><script src="/js/jquery.min.js"></script><script src="/js/tether.min.js"></script><script src="/js/bootstrap.min.js"></script><script src="/js/anchor.min.js"></script><script src="/js/site.js"></script><link rel="shortcut icon" href="/images/favicon.ico"><link rel="apple-touch-icon" href="/images/apple-touch-icon.png"><link rel="apple-touch-icon" sizes="72x72" href="/images/apple-touch-icon-72x72.png"><link rel="apple-touch-icon" sizes="114x114" href="/images/apple-touch-icon-114x114.png"><link rel="stylesheet" type="text/css" href="/css/fonts.css"><link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml"></head><body class="hero"><div class="container"><section class="header"><img src="images/oii-medium-logo.svg"><h4 class="title">Security and Privacy Software Metrics </h4><div class="row"><input type="email" placeholder="your@email.com" style="text-align:center"></div><div class="row"><input type="submit" value="Keep me updated" class="button"></div></section><div class="navbar-spacer"></div><nav class="navbar"><div class="container"><button type="button" data-toggle="collapse" data-target="#navbar" class="navbar-toggler hidden-md-up">☰ Menu</button><div id="navbar" class="collapse navbar-toggleable-sm"><ul class="nav navbar-nav"><li class="nav-item"><a href="/" class="nav-link">Home <span class="sr-only">(current)</span></a></li><li class="nav-item dropdown"><a data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" class="nav-link dropdown-toggle">About</a><div class="dropdown-menu"><a href="/about" class="dropdown-item">Overview</a><a href="/about#partners" class="dropdown-item">Partners</a></div></li><li class="nav-item dropdown"><a data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" class="nav-link dropdown-toggle"> 
 Approach</a><div class="dropdown-menu"><a href="/framework" class="dropdown-item">Overview</a><a href="/impact" class="dropdown-item">Impact</a><a href="/practices" class="dropdown-item">Practices</a><a href="/metrics" class="dropdown-item">Metrics</a><div class="dropdown-divider"></div><a href="#" class="dropdown-item">Scores (soon)</a></div></li><li class="nav-item"><a href="/blog" class="nav-link">Blog</a></li><li class="nav-item"><a href="/contribute" class="nav-link">Contribute</a></li></ul></div></div></nav><div class="docs-section"><div class="space"> </div><h2 id="open-integrity-is-booting-up.">Open Integrity is <a href="blog/booting-up">booting up</a>.</h2>
-<p>We provide <strong>reliable and evidence based</strong> data about:</p>
+<p>We gather and publish <strong>measurement and claims</strong> to provide <strong>evidence based data</strong> about:</p>
 <div class="row">
 <div class="one-third column category">
 <h4 id="technology"><a href="/practices/technology">Technology</a></h4>
@@ -36,7 +36,7 @@ Approach</a><div class="dropdown-menu"><a href="/framework" class="dropdown-item
 <div class="one-half column category">
 <p>We're busy:</p>
 <ul>
-<li>assembling our team and our advisory board</li>
+<li>developing partnerships</li>
 <li>structuring the participation framework</li>
 <li>designing the technical architecture and web application design</li>
 </ul>
@@ -44,8 +44,8 @@ Approach</a><div class="dropdown-menu"><a href="/framework" class="dropdown-item
 <div class="one-half column category">
 <p>Take a peek into our current thinking on design:</p>
 <ul>
+<li><a href="architecture">Architecture</a></li>
 <li><a href="framework/workflow">Use Cases</a></li>
-<li><a href="design/sitemap-2">Sitemap</a></li>
 <li><a href="mockup">Mockup Site</a></li>
 </ul>
 </div>
@@ -76,10 +76,10 @@ Recent Blog Posts
 </h5>
 <ul class="related-posts">
 <li>
-<a href="/blog/internet-freedom-festival">Impact Workshop at the IFF in Valencia</a> <small>2016-03-08</small>
+<a href="/blog/booting-up">Booting up Open Integrity</a> <small>2016-03-01</small>
 </li>
 <li>
-<a href="/blog/booting-up">Booting up Open Integrity</a> <small>2016-03-01</small>
+<a href="/blog/internet-freedom-festival">Impact Workshop at the IFF in Valencia</a> <small>2016-03-08</small>
 </li>
 </ul>
 </div><div class="row links"><small><div class="utilities u-pull-right"><a href="https://code.iilab.org/openintegrity/www/edit/master/content/index.md">Edit</a> - <a href="https://code.iilab.org/openintegrity/www/commits/master/content/index.md">Changes</a> - <a href="https://code.iilab.org/openintegrity/www/tree/master/content/index.md">Source</a></div></small></div></div></body><hr><div class="section get-help"><div class="container"><h3 class="section-heading">Want to join the initiative?</h3><p class="section-description">Join us in providing information<br>about software practices.<br>Get in touch to join the initiative !</p><a href="mailto:contact@openintegrity.org" class="button button-primary">Get in touch</a></div></div><div class="section categories"><div class="container"><div class="row"><div class="two columns">&nbsp;</div><div class="eight column category"><h4>Developed with ❤ by</h4><a href="https://iilab.org"><img src="/images/iilab_white.svg" class="u-max-full-width"></a><h5>Information Innovation Lab</h5><p>Applied research and development for public interest technology.</p></div><div class="two columns">&nbsp;</div></div></div></div><script>$( document ).ready(function() {
